--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,67 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="291dp"
-        android:layout_height="499dp"
-        android:text="Button"
+        android:layout_width="286dp"
+        android:layout_height="253dp"
+        android:layout_marginBottom="37dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="25dp"
+        android:text="@string/button"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="307dp"
+        android:layout_height="82dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
+        android:checked="false"
+        android:splitTrack="false"
+        android:switchPadding="@android:dimen/app_icon_size"
+        android:text="@string/toggle_off"
+        android:textAlignment="textStart"
+        android:textOff="@string/toggle_off"
+        android:textOn="@string/toggle_on"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        tools:layout_editor_absoluteY="125dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="89dp"
+        android:layout_height="51dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="38dp"
+        android:text="@string/button2"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
+        app:layout_constraintLeft_toRightOf="@+id/editText"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/editText"
+        style="@style/Widget.AppCompat.AutoCompleteTextView"
+        android:layout_width="203dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/text"
+        android:inputType="phone"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintLeft_toLeftOf="@+id/switch1"
+        app:layout_constraintTop_toBottomOf="@+id/switch1" />
+
 </android.support.constraint.ConstraintLayout>
